--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             </section>
 
-            <div class="section-features">
+            <section class="section-features">
                 <div class="row">
                     <div class="col-1-of-4">
                         <div class="feature-box">
@@ -101,7 +101,34 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
+            <section class="section-tours">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        Most popular tours
+                    </h2>
+                </div>
+
+                <div class="row">
+                        <div class="col-1-of-3">
+                            <div class="card">
+                                <div class="card__side card__side--front">
+                                    Front
+                                </div>
+                                <div class="card">
+                                <div class="card__side card__side--back card__side--back-1">
+                                    Back
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+                        Col 1 of 3
+                    </div>
+                    <div class="col-1-of-3">
+                        Col 1 of 3
+                    </div>
+            </section>
         </main>
 
         <!--
